# Model-Informed-Flow

./: .gitignore  LICENSE  README.md  pyproject.toml  train.py
examples/: basic_training.py
model_informed_flow/: __init__.py  models.py  training.py  variational_families.py
