[project]
name = "model-informed-flow"
version = "0.1.0"
description = "Model-Informed Flow for Bayesian Inference"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.12.0",
    "jax[cuda]>=0.7.2",
    "numpy>=2.3.3",
    "optax>=0.2.6",
    "pandas>=2.3.3",
    "wandb>=0.22.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["model_informed_flow*"]
